--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ button#filterBtn:hover{
     }
 
     .modal{
-      background:var(--card);
+      background:#fff;
       max-width:920px;
       width:100%;
       border-radius:12px;
@@ -438,7 +438,7 @@ button#filterBtn:hover{
         ingredients:['nasi','telur','kecap manis','bawang merah','bawang putih'],
         steps:['Panaskan minyak, tumis bawang hingga harum.','Masukkan ayam suwir, tambahkan kecap manis.','Tambahkan nasi, aduk hingga rata.','Masak telur orak-arik dan campur.','Sajikan hangat.'],
         time:20,
-        video:'tes.mp4'
+        video:'video/nasgor.mp4'
       },
       {
         id: 2,
@@ -447,17 +447,18 @@ button#filterBtn:hover{
         img:'img/soto.jpg',
         ingredients:['ayam','soun','kubis','daun bawang','bawang merah','bawang putih','kunyit'],
         steps:['Rebus ayam hingga empuk.','Tumis bumbu halus lalu campurkan ke kaldu.','Masukkan soun dan sayuran.','Sajikan dengan bawang goreng.'],
-        time:40
+        time:40,
+        video:'video/soto.mp4'
       },
       {
         id: 3,
-        title:'Rendang Khas Palembang',
+        title:'Rendang Khas Padang',
         desc:'Masakan khas Minang yang kaya bumbu, daging dimasak lama hingga empuk dan berbalut kuah kental rempah.',
         img:'img/rendang.jpg',
         ingredients:['Daging sapi','Bumbu rendang'],
         steps:['Tumis bumbu halus bersama daun jeruk, serai, salam, dan lengkuas sampai harum dan matang.','Masukkan potongan daging, aduk hingga berubah warna.','Tuang santan, aduk terus agar santan tidak pecah.','Masak dengan api kecil hingga kuah mengental dan berminyak.','Aduk perlahan sampai daging empuk dan warna rendang kecokelatan.','Sajikan dengan nasi hangat'],
         time:20,
-        video:'nasi_goreng.mp4'
+        video:'video/rendang.mp4'
       },
       {
         id: 4,
@@ -467,7 +468,7 @@ button#filterBtn:hover{
         ingredients:['tahu','tepung'],
         steps:['Campurkan tepung terigu, maizena, bawang putih bubuk, ketumbar, garam, dan kaldu bubuk dalam wadah.','Tambahkan air sedikit demi sedikit sampai adonan kental tapi tidak terlalu cair.','Celupkan potongan tahu ke dalam adonan tepung.','Panaskan minyak, goreng tahu hingga kering dan berwarna keemasan.','Angkat dan tiriskan, sajikan dengan saus sambal'],
         time:20,
-        video:'nasi_goreng.mp4'
+        video:'video/tahu.mp4'
       },
       {
         id:5,
@@ -477,7 +478,7 @@ button#filterBtn:hover{
         ingredients:['Bumbu balado','telur'],
         steps:['Goreng telur rebus sampai kulitnya agak kering, angkat.','Haluskan cabai, bawang, dan tomat, lalu tumis sampai matang dan berminyak.','Tambahkan garam, gula, dan kaldu.','Masukkan telur, aduk hingga rata dengan sambal.','Sajikan hangat.'],
         time:20,
-        video:'nasi_goreng.mp4'
+        video:'video/telor.mp4'
       },
       {
         id:6,
@@ -487,7 +488,7 @@ button#filterBtn:hover{
         ingredients:['Kentang','Daun bawang'],
         steps:['Campur semua bahan jadi satu, aduk rata.','Bentuk bulat pipih.','Celupkan ke telur kocok lalu goreng sampai kuning keemasan.','Sajikan hangat.'],
         time:20,
-        video:'nasi_goreng.mp4'
+        video:'video/perkedel.mp4'
       },
       {
         id:7,
@@ -497,7 +498,7 @@ button#filterBtn:hover{
         ingredients:['nasi','telur'],
         steps:['Tumis bumbu halus dan daun salam sampai harum.','Masukkan sayuran dan tempe, aduk rata.','Tambahkan santan, aduk perlahan hingga matang.','Sajikan hangat.'],
         time:20,
-        video:'nasi_goreng.mp4'
+        video:'video/lodeh.mp4'
       },
       {
         id:8,
@@ -507,7 +508,7 @@ button#filterBtn:hover{
         ingredients:['nasi','telur','ayam','kecap manis','bawang merah','bawang putih'],
         steps:['Goreng tempe setengah kering, angkat.','Tumis bawang dan cabai hingga harum.','Masukkan kecap dan bumbu, lalu tambahkan tempe.','Aduk rata sampai bumbu meresap.','Sajikan hangat.'],
         time:20,
-        video:'nasi_goreng.mp4'
+        video:'video/orek.mp4'
       },
       {
         id:9,
@@ -517,7 +518,7 @@ button#filterBtn:hover{
         ingredients:['nasi','telur','ayam','kecap manis','bawang merah','bawang putih'],
         steps:['Panaskan minyak, tumis bawang hingga harum.','Masukkan ayam suwir, tambahkan kecap manis.','Tambahkan nasi, aduk hingga rata.','Masak telur orak-arik dan campur.','Sajikan hangat.'],
         time:20,
-        video:'nasi_goreng.mp4'
+        video:'video/nasi_goreng.mp4'
       },
       {
         id:10,
@@ -527,7 +528,7 @@ button#filterBtn:hover{
         ingredients:['nasi','telur','ayam','kecap manis','bawang merah','bawang putih'],
         steps:['Panaskan minyak, tumis bawang hingga harum.','Masukkan ayam suwir, tambahkan kecap manis.','Tambahkan nasi, aduk hingga rata.','Masak telur orak-arik dan campur.','Sajikan hangat.'],
         time:20,
-        video:'nasi_goreng.mp4'
+        video:'video/nasi_goreng.mp4'
       },
       {
         id:11,
@@ -537,7 +538,7 @@ button#filterBtn:hover{
         ingredients:['nasi','telur','ayam','kecap manis','bawang merah','bawang putih'],
         steps:['Panaskan minyak, tumis bawang hingga harum.','Masukkan ayam suwir, tambahkan kecap manis.','Tambahkan nasi, aduk hingga rata.','Masak telur orak-arik dan campur.','Sajikan hangat.'],
         time:20,
-        video:'nasi_goreng.mp4'
+        video:'video/nasi_goreng.mp4'
       },
       {
         id:12,
@@ -547,7 +548,7 @@ button#filterBtn:hover{
         ingredients:['nasi','telur','ayam','kecap manis','bawang merah','bawang putih'],
         steps:['Panaskan minyak, tumis bawang hingga harum.','Masukkan ayam suwir, tambahkan kecap manis.','Tambahkan nasi, aduk hingga rata.','Masak telur orak-arik dan campur.','Sajikan hangat.'],
         time:20,
-        video:'nasi_goreng.mp4'
+        video:'video/nasi_goreng.mp4'
       }
     ];
 
