--- a/login.html
+++ b/login.html
@@ -118,7 +118,7 @@
     <form id="loginForm">
       <div class="input-box">
         <i><img src="img/user.png" class="img"></i>
-        <input type="text" placeholder="Username" required>
+        <input type="email" placeholder="Email" required>
       </div>
       <div class="input-box">
         <i><img src="img/padlock.png" class="img2"></i>
@@ -128,14 +128,61 @@
     </form>
   </div>
 
- <script>
-  const loginButton = document.querySelector(".btn");
-  loginButton.addEventListener("click", (e) => {
-    e.preventDefault(); // biar form gak reload
-    localStorage.setItem("loggedIn", "true");
-    window.location.href = "index.html";
-  });
-</script>
+  <script>
+    const loginForm = document.getElementById("loginForm");
+  
+    loginForm.addEventListener("submit", (e) => {
+      e.preventDefault();
+  
+      const email = loginForm.querySelector('input[type="email"]').value;
+      const password = loginForm.querySelector('input[type="password"]').value;
+  
+      // cek username & password
+      if (email === "y4nz_281@gmail.com" && password === "12345") {
+        localStorage.setItem("loggedIn", "true");
+  
+        // Notifikasi login berhasil
+        const notif = document.createElement("div");
+        notif.textContent = "✅ Login berhasil!";
+        notif.style.position = "fixed";
+        notif.style.top = "20px";
+        notif.style.left = "50%";
+        notif.style.transform = "translateX(-50%)";
+        notif.style.background = "rgba(255,255,255,0.9)";
+        notif.style.color = "#1f5442";
+        notif.style.padding = "10px 20px";
+        notif.style.borderRadius = "10px";
+        notif.style.fontWeight = "600";
+        notif.style.boxShadow = "0 4px 12px rgba(0,0,0,0.2)";
+        notif.style.zIndex = "999";
+        document.body.appendChild(notif);
+  
+        setTimeout(() => {
+          notif.remove();
+          window.location.href = "index.html";
+        }, 1000);
+      } else {
+        // Popup error jika salah
+        const popup = document.createElement("div");
+        popup.textContent = "⚠️ Email atau password salah!";
+        popup.style.position = "fixed";
+        popup.style.top = "20px";
+        popup.style.left = "50%";
+        popup.style.transform = "translateX(-50%)";
+        popup.style.background = "rgba(255, 70, 70, 0.9)";
+        popup.style.color = "#fff";
+        popup.style.padding = "10px 20px";
+        popup.style.borderRadius = "10px";
+        popup.style.fontWeight = "600";
+        popup.style.boxShadow = "0 4px 12px rgba(0,0,0,0.2)";
+        popup.style.zIndex = "999";
+        document.body.appendChild(popup);
+  
+        setTimeout(() => popup.remove(), 1500);
+      }
+    });
+  </script>
+  
 
 </body>
 </html>
