--- a/login.html
+++ b/login.html
@@ -118,7 +118,7 @@
     <form id="loginForm">
       <div class="input-box">
         <i><img src="img/user.png" class="img"></i>
-        <input type="email" placeholder="Email" required>
+        <input type="email" placeholder="example@gmail.com" required>
       </div>
       <div class="input-box">
         <i><img src="img/padlock.png" class="img2"></i>
